# streamlet

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: adaptive_q_minatar.py  avg_brax.py  calibrated_ac_brax.py  calibrated_asterix_investigate.py  calibrated_q_minatar.py  calibrated_td_ettm2.py  implicit_ac_minatar.py  implicit_q_minatar.py  implicit_qrc_minatar.py  implicit_td_ettm2.py  intentional_ac_brax.py  intentional_q_classic_control.py  intentional_q_minatar.py  intentional_td_ettm2.py  measured_asterix_investigate.py  measured_q_minatar.py  measured_td_ettm2.py  q_minatar.py  qrc_minatar.py  rarespike_analysis.py  recurrent_stream_q_minatar.py  run_q_minatar.sh  stream_ac_minatar.py  stream_q_classic_control.py  stream_q_craftax.py  stream_q_craftax_classic.py  stream_q_minatar.py  stream_q_pufferlib.py  stream_recurrent_q_minatar.py  stream_sarsa_minatar.py  stream_td_ettm2.py  td_ettm2.py  td_rarespike.py
scripts/: analyze_minatar.py  benchmark.py  compare_returns.py  diagnose_optimizers.py  diagnose_spaceinvaders.py  evaluate_measured.py  launch.py  minatar.py  wandb_client.py
streamlet/algorithms/: ac_lambda.py  algorithm.py  avg_lambda.py  q_lambda.py  qrc_lambda.py  recurrent_ac_lambda.py  recurrent_q_lambda.py  recurrent_qrc_lambda.py  recurrent_td_lambda.py  sarsa_lambda.py  soft_ac_lambda.py  soft_q_lambda.py  td_lambda.py
streamlet/environments/: ale.py  brax.py  craftax.py  environment.py  ett.py  gymnasium.py  pufferlib.py
streamlet/loggers/: __init__.py  checkpoint.py  dashboard.py  logger.py  wandb.py
streamlet/networks/: __init__.py
streamlet/optimizers/: __init__.py  adaptive.py  alpha_bound.py  calibrated.py  implicit.py  intentional.py  obgd.py  optimizer.py
streamlet/utils/: __init__.py  axes.py  td_error_scaler.py  timestep.py  transition.py
streax/algorithms/: __init__.py  ac_lambda.py  algorithm.py  avg.py  avg_lambda.py  q_lambda.py  qrc.py  qrc_lambda.py  recurrent_ac_lambda.py  recurrent_avg.py  recurrent_avg_lambda.py  (+9 more)
tests/: test_alpha_bound.py  test_calibrated.py  test_implicit_qrc.py  test_measured.py  test_rarespike.py
(+117 files in other folders)
