[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streax"
version = "0.1.0"
description = "Streax: Streaming RL in JAX"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax[cuda12]>=0.7.0 ; sys_platform == 'linux'",
    "jax>=0.7.0 ; sys_platform == 'darwin'",
    "flax>=0.10.2",
    "lox",
    "distrax>=0.1.5",
    "gymnax>=0.0.9",
    "brax>=0.10.0",
    "rich",
    "wandb",
]

[project.optional-dependencies]
gymnasium = ["gymnasium"]
ale       = ["ale-py[gymnasium]"]
ett  = ["matplotlib"]
cluster   = ["slurmpilot"]
pufferlib = ["pufferlib-core"]


[tool.uv.sources]
lox = { git = "https://github.com/huterguier/lox" }
slurmpilot = { git = "ssh://git@github.com/noahfarr/slurmpilot.git", branch = "feat/spignore" }

[dependency-groups]
dev = [
    "joblib>=1.5.3",
    "tqdm>=4.67.3",
]
