[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamlet"
version = "0.1.0"
description = "Streamlet: Streaming RL in JAX"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax[cuda12]>=0.7.0 ; sys_platform == 'linux'",
    "jax>=0.7.0 ; sys_platform == 'darwin'",
    "flax>=0.10.2",
    "lox",
    "distrax>=0.1.5",
    "gymnax>=0.0.9",
    "brax>=0.10.0",
    "rich",
    "wandb",
    "craftax>=1.5.0",
    "animax",
]

[project.optional-dependencies]
gymnasium = ["gymnasium", "gymnasium-ffi ; python_version >= '3.13'"]
ale       = ["ale-py[gymnasium]"]
ett  = ["matplotlib"]
cluster   = ["slurmpilot"]
pufferlib = ["pufferlib-core"]
craftax   = ["craftax"]


[tool.uv.sources]
lox = { git = "https://github.com/huterguier/lox", branch = "dev" }
animax = { git = "ssh://git@github.com/noahfarr/blinx.git" }
slurmpilot = { git = "ssh://git@github.com/noahfarr/slurmpilot.git", branch = "feat/spignore" }
gymnasium-ffi = { git = "ssh://git@github.com/noahfarr/gymnasium-ffi.git" }

[dependency-groups]
dev = [
    "joblib>=1.5.3",
    "tqdm>=4.67.3",
]
